name:                fay-base
version:             0.1.0.0
synopsis:            The base package for Fay.
description:         The base package for Fay.
homepage:            https://github.com/faylang
license:             BSD3
license-file:        LICENSE
author:              Chris Done
maintainer:          chrisdone@gmail.com
copyright:           2012 Chris Done
category:            Development
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs:    src
  exposed-modules:   Prelude
                    ,FFI
